[package]
name = "plutonio"
version = "0.1.0"
authors = ["Semen Evdokimov <evdokimovs@protonmail.ch>"]
edition = "2018"
description = "Simple and easily expandable financial accounting app."

[dependencies]
clap = "2.33.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
diesel = { version = "1.4.2", features = ["sqlite", "serde_json"] }
config = "0.9.3"
serde_json = "1.0.39"
serde = { version = "1.0.90", features = ["derive"] }
smart-default = "0.5"
actix = "0.7.0"
futures = "0.1.25"
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }